Created an unsorted list in index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <h1>
     Hello, Code School!
   </h1>
+  <ul>
+    <li>Item A</li>
+    <li>Item B</li>
+    <li>Item C</li>
+  </ul>
   <body>
 
     Hello, I am meenakshi
