--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     Hello, Code School!
   </h1>
   <ul>
-    <li>Item A</li>
-    <li>Item B</li>
-    <li>Item C</li>
+    <li>AWS</li>
+    <li>Business Intelligence</li>
+    <li>Shell scripting</li>
   </ul>
   <body>
 
