--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
   <title>
     Meenakshi
   </title>
-  <h1>
-    Hello, Code School!
-  </h1>
+  <h1>Hello, Code School!</h1>
   <ul>
     <li>AWS</li>
     <li>Business Intelligence</li>
     <li>Shell scripting</li>
   </ul>
   <body>
-
     Hello, I am meenakshi
   </body>
 </html>
