--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <title>
-    Meenakshi
+    AMAN
   </title>
   <h1>Hello, Code School!</h1>
   <ul>
