changed the header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>
     AMAN
   </title>
-  <h1>Hello, Code School!</h1>
+  <h1>Hello, Code School! my name is AMANSHUKLA </h1>
   <ul>
     <li>AWS</li>
     <li>Business Intelligence</li>
